tests/pos/simple/shapes.ts

/*@ a :: { number | v = 1 } */
var a = 1;
