tests/neg/simple/glob-002.ts
/*@ glob :: number */
var glob = 1;
assert(false);

